# llm-linguistic-eval-62f9-gemini

./: .resource_finder_complete  README.md  REPORT.md  found_ids.txt  literature_review.md  planning.md  pyproject.toml  requirements.txt  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_gemini_transcript.jsonl  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.tex  neurips_2025.sty  references.bib
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md
results/: metrics_summary.csv
results/raw/: claude-sonnet-4.5_en.json  claude-sonnet-4.5_es.json  claude-sonnet-4.5_zh.json  gpt-4o_ar.json  gpt-4o_bn.json  gpt-4o_en.json  gpt-4o_es.json  gpt-4o_fr.json  gpt-4o_id.json  gpt-4o_ko.json  gpt-4o_sw.json  gpt-4o_ta.json  gpt-4o_te.json  gpt-4o_vi.json  gpt-4o_zh.json
scripts/: check_datasets.py  download_datasets.py  download_papers.py  get_arxiv_ids.py  read_batch_1.py  read_batch_2_placeholder.py  search_hf_datasets.py
src/: analyze_results.py  check_alignment.py  check_prompts.py  evaluate.py  test_setup.py
