[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for multilingual LLM evaluation experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "openai",
    "anthropic",
    "python-dotenv",
    "tqdm",
    "requests",
    "aiohttp",
    "tiktoken"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
